2023-08-16  Charlie Zender  <zender@uci.edu>

	* nco_grd_nfr() test MPAS coordinates without units attributes for being radians not degrees

2023-08-15  Charlie Zender  <zender@uci.edu>

	* Remove WARNING statements about NC_STRING not being supported/CF-compliant

2023-08-14  Charlie Zender  <zender@uci.edu>

	* Verify CF bounds attribute now handled correctly when stored as NC_STRING

	* Add nco_free_string() in support of NC_STRING support

2023-08-12  Charlie Zender  <zender@uci.edu>

	* nco_xtr_cf_var_add() nco_is_spc_in_cf_att(): update WARNING messages about NC_STRING attributes not being CF-compliant

2023-07-27  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha01: For All Mankind';git push
	git tag -a 5.1.8-alpha01 -m 'Functionally identical to 5.1.7';git push --tags

2023-07-26  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.7 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.7: Barbenheimer';git push
	git tag -a 5.1.7 -m 'all: Intel compiler fixes;ncclimo/ncremap implement cmp_sng; ncremap: CF lon_bnds';git push --tags

	* Remove call to nco_msh_lon_cf() for further debugging in 5.1.8 (it crashes Anaconda tests in a manner unreproducible on my laptop)

	* Add "DOI = 10.1016/j.envsoft.2008.03.004" in NCO global attribute

2023-07-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.7-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.7-beta01: Fan Dance';git push
	git tag -a 5.1.7-beta01 -m 'all: Intel compiler fixes;ncclimo/ncremap implement cmp_sng; ncremap: CF lon_bnds';git push --tags

	* ncks.c protect omp_set_num_threads() with ENABLE_OPENMP to fix #271

2023-07-23  Charlie Zender  <zender@uci.edu>

	* Implement nco_msh_lon_cf() in nco_rgr_wgt() to ensure	CF-compliant longitude bounds in regridded files

2023-07-16  Charlie Zender  <zender@uci.edu>

	* Tidy nco_map_mk(), nco_msh_lon_crr() to prepare to always output bounds on same branch cut
