@@ -1,5 +1,9 @@
 2023-08-16  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.1.8-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha02: Victoria Beach';git push
+	git tag -a 5.1.8-alpha02 -m 'all: allow NC_STRING instead of NC_CHAR atts; ncremap: nfr mpas grd rdn';git push --tags
+
 	* nco_grd_nfr() test MPAS coordinates without units attributes for being radians not degrees
 
 2023-08-15  Charlie Zender  <zender@uci.edu>
